--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ header {
   /* backdrop-filter: blur(12px); */
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 0;
   left: 0;
   z-index: 98;
